# my-startup-template

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  amplify.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: codeguard-0-additional-cryptography.instructions.md  codeguard-0-api-web-services.instructions.md  codeguard-0-authentication-mfa.instructions.md  codeguard-0-authorization-access-control.instructions.md  codeguard-0-client-side-web-security.instructions.md  codeguard-0-cloud-orchestration-kubernetes.instructions.md  codeguard-0-devops-ci-cd-containers.instructions.md  codeguard-0-framework-and-languages.instructions.md  codeguard-0-iac-security.instructions.md  codeguard-0-input-validation-injection.instructions.md  codeguard-0-logging.instructions.md  codeguard-0-mobile-apps.instructions.md  codeguard-0-privacy-data-protection.instructions.md  codeguard-0-safe-c-functions.instructions.md  codeguard-0-session-management-and-cookies.instructions.md  codeguard-0-supply-chain-security.instructions.md  codeguard-0-xml-and-serialization.instructions.md  codeguard-1-crypto-algorithms.instructions.md  (+2 more)
.github/workflows/: ci.yml  promote.yml  (+2 more)
.zap/: rules.tsv
scripts/: README.md  pyproject.toml  rename-template.mjs  verify-vscode-extensions.mjs
(+15 files in other folders)
