[project]
name = "scripts"
version = "0.0.0"
description = "Ad-hoc Python scripts and custom MCP servers for this monorepo."
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
